Do some Modifications
